<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.3</version>
        <relativePath/>
    </parent>

    <groupId>org.rama</groupId>
    <artifactId>rama-spring-starter-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>rama-spring-starter-parent</name>
    <description>Reusable Rama Spring Boot starter</description>
    <url>https://gitlab.rama.mahidol.ac.th/ramacare/backend/rama-spring-starter</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>Ramathibodi Hospital</name>
        <url>https://www.rama.mahidol.ac.th</url>
    </organization>

    <developers>
        <developer>
            <id>ramacare</id>
            <name>Ramacare Team</name>
            <organization>Ramathibodi Hospital</organization>
            <organizationUrl>https://www.rama.mahidol.ac.th</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://gitlab.rama.mahidol.ac.th/ramacare/backend/rama-spring-starter.git</connection>
        <developerConnection>scm:git:https://gitlab.rama.mahidol.ac.th/ramacare/backend/rama-spring-starter.git</developerConnection>
        <url>https://gitlab.rama.mahidol.ac.th/ramacare/backend/rama-spring-starter</url>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>rama-spring-core</module>
        <module>rama-spring-autoconfigure</module>
        <module>rama-spring-boot-starter</module>
        <module>rama-spring-demo</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <spring-cloud.version>2025.1.1</spring-cloud.version>
        <minio.version>8.6.0</minio.version>
        <tika.version>3.2.3</tika.version>
        <poi.version>5.5.1</poi.version>
        <json-path.version>2.10.0</json-path.version>
        <jsoup.version>1.21.2</jsoup.version>
        <zxing.version>3.5.3</zxing.version>
        <pdfbox.version>3.0.5</pdfbox.version>
        <commons-validator.version>1.10.1</commons-validator.version>
        <graphql-java.version>24.0</graphql-java.version>
        <meilisearch.version>0.15.0</meilisearch.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <maven.javadoc.skip>false</maven.javadoc.skip>
    </properties>

    <distributionManagement>
        <repository>
            <id>github-pages</id>
            <name>GitHub Pages Maven Repository</name>
            <url>https://ramacare.github.io/rama-spring-starter</url>
        </repository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.12.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <failOnError>false</failOnError>
                    <doclint>none</doclint>
                    <skip>${maven.javadoc.skip}</skip>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
